# PsyGuard

./: .gitignore  Cargo.toml  Makefile  QUICKSTART.md  README.md  Slogan.txt  agent.md
Psy docs/: 1-Introduction.md  2-Miners & Roles on Psy.md  3-How a Block is Made.md  4_Global User Tree Aggregation (GUTA).md  5-Local Proving (UPS).md  6-Smart Contracts.md  7-Psy Jargon.md
apps/extension/: index.html  package-lock.json  package.json  vite.config.ts
apps/extension/public/: manifest.json
apps/extension/src/: App.css  App.tsx  index.css
apps/extension/src/components/: SecurityPanel.tsx  Settings.tsx  TransactionPanel.tsx  WalletPanel.tsx
apps/extension/src/lib/: wasm.ts
apps/extension/src/psy/: gutaSync.ts
apps/extension/src/services/: priceService.ts
crates/psyguard-core/: Cargo.toml
crates/psyguard-core/src/: cft.rs  error.rs  lib.rs  preview.rs  queue.rs  sdkey.rs  state.rs  traits.rs  types.rs  ups.rs
crates/psyguard-provers/: Cargo.toml
crates/psyguard-provers/src/: lib.rs  mock.rs
crates/psyguard-wasm/: Cargo.toml
crates/psyguard-wasm/src/: lib.rs  session.rs  utils.rs
