[package]
name = "psyguard-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
psyguard-core = { path = "../psyguard-core" }
psyguard-provers = { path = "../psyguard-provers" }

wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
hex = { workspace = true }
log = { workspace = true }
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

[dependencies.web-sys]
workspace = true
features = [
    "console",
    "Window",
    "Storage",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
